--- a/nginx-app/deployment.yml
+++ b/nginx-app/deployment.yml
@@ -2,22 +2,22 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    app: nginx
-  name: nginx
+    app: httpd
+  name: httpd
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: nginx
+      app: httpd
   strategy: {}
   template:
     metadata:
       labels:
-        app: nginx
+        app: httpd
     spec:
       containers:
-      - image: nginx
-        name: nginx
+      - image: httpd
+        name: httpd
         imagePullPolicy: Always
         ports: 
         - containerPort: 80
